Apply arm64v8 node rule to Renovate

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,6 +5,10 @@
   rebaseWhen: "behind-base-branch",
   "packageRules": [
     {
+      "matchPackageNames": ["node", "arm64v8/node"],
+      "versioning": "node"
+    },
+    {
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch",
       "matchPackagePatterns": [
