--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ NAVIGRAPH_CLIENT_SECRET=
 NAVIGRAPH_SERVER_ID=
 NAVIGRAPH_SERVER_SECRET=
 
+VATSIM_CLIENT_ID=762
+VATSIM_CLIENT_SECRET=BoQ79tZfrHutIAiCIRrneuzFKBjgEs9y3gwy1tQW
+VATSIM_ENDPOINT=https://auth-dev.vatsim.net
+
 DOMAIN=https://localhost:8080
 DATABASE_URL="mysql://root:localhost@db:3306?schema=public"
