--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.11.0",
+    "cron": "^3.1.6",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "nuxt": "^3.11.1",
@@ -39,6 +40,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
+    "postcss-html": "^1.6.0",
     "sass": "^1.72.0",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-scss": "^14.0.0",
