--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.11.0",
     "cron": "^3.1.6",
+    "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "nuxt": "^3.11.1",
