--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.1.7",
     "prisma": "^5.11.0",
     "ua-parser-js": "2.0.0-beta.2",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-yandex-maps": "^2.1.0"
