--- a/package.json
+++ b/package.json
@@ -18,38 +18,39 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.1",
     "cron": "^3.1.6",
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
-    "nuxt": "^3.11.1",
+    "leaflet": "^1.9.4",
+    "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
-    "prisma": "^5.11.0",
+    "prisma": "^5.12.1",
     "ua-parser-js": "2.0.0-beta.2",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-yandex-maps": "^2.1.0"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.1.3",
+    "@nuxt/devtools": "^1.1.5",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
-    "@stylistic/stylelint-plugin": "^2.1.0",
-    "@types/eslint": "^8.56.6",
+    "@stylistic/stylelint-plugin": "^2.1.1",
+    "@types/eslint": "^8.56.7",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
+    "@types/leaflet": "^1.9.9",
+    "@types/node": "^20.12.5",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
-    "sass": "^1.72.0",
-    "stylelint": "^16.2.1",
+    "sass": "^1.74.1",
+    "stylelint": "^16.3.1",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.4",
     "vue-tsc": "^1.8.27"
   },
   "packageManager": "yarn@4.1.1"
