--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
-    "leaflet": "^1.9.4",
     "nuxt": "^3.11.2",
+    "ol": "^9.1.0",
     "pinia": "^2.1.7",
     "prisma": "^5.12.1",
     "ua-parser-js": "2.0.0-beta.2",
@@ -39,8 +39,8 @@
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/stylelint-plugin": "^2.1.1",
     "@types/eslint": "^8.56.7",
+    "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/leaflet": "^1.9.9",
     "@types/node": "^20.12.5",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
