--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.12.1",
+    "adm-zip": "^0.5.12",
     "cron": "^3.1.6",
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -27,6 +28,7 @@
     "ol": "^9.1.0",
     "pinia": "^2.1.7",
     "prisma": "^5.12.1",
+    "sqlite3": "^5.1.7",
     "ua-parser-js": "2.0.0-beta.2",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
@@ -38,6 +40,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/stylelint-plugin": "^2.1.1",
+    "@types/adm-zip": "^0",
     "@types/eslint": "^8.56.7",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
