--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -46,6 +46,7 @@
       }
     ],
     "custom-property-pattern": null,
+    "no-global-function-names": null,
     "keyframes-name-pattern": null,
     "import-notation": null,
     "media-feature-range-notation": null,
