--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "stylelint": "stylelint --max-warnings=0 ./src/**/*{.css,scss,.vue}",
     "stylelint:fix": "stylelint --fix ./src/**/*{.css,scss,.vue}",
     "lint:fix": "yarn stylelint:fix && yarn lint:ts:fix",
-    "lint": "yarn stylelint && yarn lint:ts"
+    "lint": "yarn stylelint && yarn lint:ts",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.12.1",
     "adm-zip": "^0.5.12",
-    "cron": "^3.1.6",
+    "cron": "^3.1.7",
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
@@ -40,20 +41,20 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/stylelint-plugin": "^2.1.1",
-    "@types/adm-zip": "^0",
-    "@types/eslint": "^8.56.7",
+    "@types/adm-zip": "^0.5.5",
+    "@types/eslint": "^8.56.9",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
-    "sass": "^1.74.1",
+    "sass": "^1.75.0",
     "stylelint": "^16.3.1",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^5.4.4",
+    "typescript": "^5.4.5",
     "vue-tsc": "^1.8.27"
   },
   "packageManager": "yarn@4.1.1"
