feat: prepare deploy, add header, footer, settings

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -1,6 +1,26 @@
 FROM node:20
 WORKDIR /frontend
 
+ARG DOMAIN
+ARG NAVIGRAPH_CLIENT_ID
+ARG NAVIGRAPH_CLIENT_SECRET
+ARG NAVIGRAPH_SERVER_ID
+ARG NAVIGRAPH_SERVER_SECRET
+ARG VATSIM_CLIENT_ID
+ARG VATSIM_CLIENT_SECRET
+ARG VATSIM_ENDPOINT
+ARG DATABASE_URL
+
+ENV DOMAIN=${DOMAIN}
+ENV NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
+ENV NAVIGRAPH_CLIENT_SECRET=${NAVIGRAPH_CLIENT_SECRET}
+ENV NAVIGRAPH_SERVER_ID=${NAVIGRAPH_SERVER_ID}
+ENV NAVIGRAPH_SERVER_SECRET=${NAVIGRAPH_SERVER_SECRET}
+ENV VATSIM_CLIENT_ID=${VATSIM_CLIENT_ID}
+ENV VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
+ENV VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
+ENV DATABASE_URL=${DATABASE_URL}
+
 COPY package.json package.json
 COPY yarn.lock yarn.lock
 COPY .yarn /frontend/.yarn/
