--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,3 +14,22 @@ jobs:
         with:
           node-version: 20.x
       - uses: ./.github/actions/codecheck
+      - name: Build image
+        uses: VaultVulp/gp-docker-action@1.6.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          image-name: production
+          image-tag: latest
+          pull-image: true
+          dockerfile: .config/Dockerfile
+          custom-args: | 
+            --build-arg=DOMAIN="${{ DOMAIN }}" \
+            --build-arg=NAVIGRAPH_CLIENT_ID="${{ NAVIGRAPH_CLIENT_ID }}" \
+            --build-arg=NAVIGRAPH_SERVER_ID="${{ NAVIGRAPH_SERVER_ID }}" \
+            --build-arg=VATSIM_CLIENT_ID="${{ VATSIM_CLIENT_ID }}" \
+            --build-arg=VATSIM_ENDPOINT="${{ VATSIM_ENDPOINT }}" \
+            --build-arg=DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            --build-arg=NAVIGRAPH_CLIENT_SECRET="${{ secrets.NAVIGRAPH_CLIENT_SECRET }}" \
+            --build-arg=NAVIGRAPH_SERVER_SECRET="${{ secrets.NAVIGRAPH_SERVER_SECRET }}" \
+            --build-arg=VATSIM_CLIENT_SECRET="${{ secrets.VATSIM_CLIENT_SECRET }}"
+      - name: Pull and deploy image
