--- a/docker-compose.prod-test.yml
+++ b/docker-compose.prod-test.yml
@@ -14,4 +14,4 @@ services:
         ports:
             - "8080:8080"
         volumes:
-            - ".:/frontend:rw"
+            - ".:/radar:rw"
