--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,11 +5,8 @@ on:
     branches: [ main ]
 
 jobs:
-  deploy:
+  check:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v4
       - name: Install node
@@ -17,6 +14,14 @@ jobs:
         with:
           node-version: 20.x
       - uses: ./.github/actions/codecheck
+  push:
+    runs-on: ubuntu-latest
+    needs:
+      - check
+    permissions:
+      contents: read
+      packages: write
+    steps:
       - name: Build image
         uses: VaultVulp/gp-docker-action@1.6.0
         with:
@@ -25,7 +30,7 @@ jobs:
           image-tag: latest
           pull-image: true
           dockerfile: .config/Dockerfile
-          custom-args: | 
+          custom-args: |
             --build-arg=DOMAIN="$DOMAIN" \
             --build-arg=NAVIGRAPH_CLIENT_ID="$NAVIGRAPH_CLIENT_ID" \
             --build-arg=NAVIGRAPH_SERVER_ID="$NAVIGRAPH_SERVER_ID" \
@@ -35,3 +40,30 @@ jobs:
             --build-arg=NAVIGRAPH_CLIENT_SECRET="${{ secrets.NAVIGRAPH_CLIENT_SECRET }}" \
             --build-arg=NAVIGRAPH_SERVER_SECRET="${{ secrets.NAVIGRAPH_SERVER_SECRET }}" \
             --build-arg=VATSIM_CLIENT_SECRET="${{ secrets.VATSIM_CLIENT_SECRET }}"
+  deploy:
+    runs-on: production
+    needs:
+      - push
+    permissions:
+      contents: read
+      packages: read
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull
+        shell: bash
+        run: docker pull ghcr.io/daniluk4000/vatsim-radar/production:latest
+      - name: Build
+        shell: bash
+        run: docker compose -f docker-compose.prod.yml build
+      - name: Deploy
+        shell: bash
+        run: docker compose -f docker-compose.prod.yml up -d
+      - name: Clear
+        shell: bash
+        run: docker system prune --all --force && docker system prune --volumes --force
