chore(ci): Fix CI

--- a/.config/nginx/nginx.conf
+++ b/.config/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
     ##
 
     access_log off;
-    error_log /var/log/nginx/error.log crit
+    error_log /var/log/nginx/error.log crit;
 
     ##
     # Gzip Settings
