--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 default_server ssl;
-    listen [::]:80 default_server ssl;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
     http2 on;
 
