--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,8 +42,8 @@ jobs:
             --build-arg=VATSIM_CLIENT_SECRET="${{ secrets.VATSIM_CLIENT_SECRET }}"
   deploy:
     runs-on: production
-#    needs:
-#      - push
+    needs:
+      - push
     permissions:
       contents: read
       packages: read
