--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -11,15 +11,15 @@ ARG VATSIM_CLIENT_SECRET
 ARG VATSIM_ENDPOINT
 ARG DATABASE_URL
 
-ENV DOMAIN=${DOMAIN}
-ENV NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
-ENV NAVIGRAPH_CLIENT_SECRET=${NAVIGRAPH_CLIENT_SECRET}
-ENV NAVIGRAPH_SERVER_ID=${NAVIGRAPH_SERVER_ID}
-ENV NAVIGRAPH_SERVER_SECRET=${NAVIGRAPH_SERVER_SECRET}
-ENV VATSIM_CLIENT_ID=${VATSIM_CLIENT_ID}
-ENV VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
-ENV VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
-ENV DATABASE_URL=${DATABASE_URL}
+ENV NUXT_DOMAIN=${DOMAIN}
+ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
+ENV NUXT_NAVIGRAPH_CLIENT_SECRET=${NAVIGRAPH_CLIENT_SECRET}
+ENV NUXT_NAVIGRAPH_SERVER_ID=${NAVIGRAPH_SERVER_ID}
+ENV NUXT_NAVIGRAPH_SERVER_SECRET=${NAVIGRAPH_SERVER_SECRET}
+ENV NUXT_VATSIM_CLIENT_ID=${VATSIM_CLIENT_ID}
+ENV NUXT_VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
+ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
+ENV NUXT_DATABASE_URL=${DATABASE_URL}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
