chore(ci): Fix CI

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -20,6 +20,7 @@ ENV NUXT_VATSIM_CLIENT_ID=${VATSIM_CLIENT_ID}
 ENV NUXT_VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
 ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
 ENV NUXT_DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_URL=${DATABASE_URL}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
