--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,7 +15,8 @@ services:
     container_name: app
     image: ghcr.io/daniluk4000/vatsim-radar/production
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     healthcheck:
       test: "bash -c 'echo -n > /dev/tcp/127.0.0.1/3000'"
       interval: 1s
