chore: add discord secrets

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -10,6 +10,8 @@ ARG VATSIM_CLIENT_ID
 ARG VATSIM_CLIENT_SECRET
 ARG VATSIM_ENDPOINT
 ARG DATABASE_URL
+ARG DISCORD_CLIEND_ID
+ARG DISCORD_TOKEN
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
@@ -21,6 +23,8 @@ ENV NUXT_VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
 ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
 ENV NUXT_DATABASE_URL=${DATABASE_URL}
 ENV DATABASE_URL=${DATABASE_URL}
+ENV DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
+ENV DISCORD_TOKEN=${DISCORD_TOKEN}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
