chore: fix discord secrets

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -23,8 +23,8 @@ ENV NUXT_VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
 ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
 ENV NUXT_DATABASE_URL=${DATABASE_URL}
 ENV DATABASE_URL=${DATABASE_URL}
-ENV DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
-ENV DISCORD_TOKEN=${DISCORD_TOKEN}
+ENV NUXT_DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
+ENV NUXTDISCORD_TOKEN=${DISCORD_TOKEN}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
