--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -24,7 +24,7 @@ ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
 ENV NUXT_DATABASE_URL=${DATABASE_URL}
 ENV DATABASE_URL=${DATABASE_URL}
 ENV NUXT_DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
-ENV NUXTDISCORD_TOKEN=${DISCORD_TOKEN}
+ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
