--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ol": "^9.1.0",
     "pinia": "^2.1.7",
     "prisma": "^5.12.1",
+    "sharp": "^0.33.3",
     "sqlite3": "^5.1.7",
     "ua-parser-js": "2.0.0-beta.2",
     "vite-svg-loader": "^5.1.0",
