--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,7 @@
 services:
   nginx:
     image: nginx
+    restart: always
     container_name: nginx
     volumes:
       - ./.config/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -13,6 +14,7 @@ services:
 
   app:
     container_name: app
+    restart: always
     image: ghcr.io/daniluk4000/vatsim-radar/production
     depends_on:
       db:
@@ -26,6 +28,7 @@ services:
 
   db:
     image: mysql
+    restart: always
     container_name: db
     cap_add:
       - SYS_NICE
