--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ VATSIM_CLIENT_SECRET=BoQ79tZfrHutIAiCIRrneuzFKBjgEs9y3gwy1tQW
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 
 DOMAIN=https://localhost:8080
-DATABASE_URL="mysql://root:localhost@db:3306?schema=public"
+DATABASE_URL="mysql://root:localhost@db:3306/radar?schema=public"
