Upgrade to eslint v9

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "node .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "recreateDb": "npx prisma migrate diff --from-empty --to-schema-datamodel prisma/schema.prisma --script > prisma/migrations/0_init/migration.sql && rm -rf .config/db && docker compose down",
-    "lint:ts": "eslint --ext \".js,.ts,.vue\" ./src",
-    "lint:ts:fix": "eslint --fix --ext \".js,.ts,.vue\" ./src",
+    "lint:ts": "eslint ./src",
+    "lint:ts:fix": "eslint ./src --fix",
     "stylelint": "stylelint --max-warnings=0 ./src/**/*{.css,scss,.vue}",
     "stylelint:fix": "stylelint --fix ./src/**/*{.css,scss,.vue}",
     "lint:fix": "yarn stylelint:fix && yarn lint:ts:fix",
@@ -40,16 +40,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.2.0",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxt/eslint": "^0.3.10",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/stylelint-plugin": "^2.1.2",
     "@types/adm-zip": "^0.5.5",
-    "@types/eslint": "^8.56.10",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.7",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.12.8",
+    "eslint": "^9.2.0",
     "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "sass": "^1.76.0",
