--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.4.5",
+    "vite-plugin-eslint2": "^4.4.0",
     "vue-tsc": "^1.8.27"
   },
   "packageManager": "yarn@4.2.1"
