--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwks-rsa": "^3.1.0",
     "nuxt": "^3.11.2",
     "ol": "^9.1.0",
+    "ol-mapbox-style": "^12.3.2",
     "pinia": "^2.1.7",
     "prisma": "^5.13.0",
     "sharp": "^0.33.3",
