--- a/docker-compose.prod-test.yml
+++ b/docker-compose.prod-test.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
     frontend:
         build:
@@ -7,11 +5,30 @@ services:
             dockerfile: .config/Dockerfile
         env_file:
             - ./.env
-        container_name: vatsim-radar-prod
+        container_name: vatsim-radar
         expose:
             - 8080
             - 9229
         ports:
-            - "8080:8080"
+            - "3000:3000"
+        depends_on:
+            db:
+                condition: service_healthy
+
+    db:
+        image: mysql
+        cap_add:
+            - SYS_NICE
+        environment:
+            - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+            - MYSQL_DATABASE=radar
+            - MYSQL_ROOT_PASSWORD=localhost
+        ports:
+            - '3306:3306'
+        healthcheck:
+            test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+            timeout: 5s
+            interval: 5s
+            retries: 40
         volumes:
-            - ".:/radar:rw"
+            - .config/db:/var/lib/mysql
