chore(ci): CI/CD variables for new discord env

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -12,6 +12,9 @@ ARG VATSIM_ENDPOINT
 ARG DATABASE_URL
 ARG DISCORD_CLIEND_ID
 ARG DISCORD_TOKEN
+ARG DISCORD_SERVER_ID
+ARG DISCORD_RELEASES_CHANNEL_ID
+ARG DISCORD_ROLE_ID
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
@@ -25,6 +28,9 @@ ENV NUXT_DATABASE_URL=${DATABASE_URL}
 ENV DATABASE_URL=${DATABASE_URL}
 ENV NUXT_DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
 ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
+ENV NUXT_DISCORD_SERVER_ID=${DISCORD_SERVER_ID}
+ENV NUXT_DISCORD_RELEASES_CHANNEL_ID=${DISCORD_RELEASES_CHANNEL_ID}
+ENV NUXT_DISCORD_ROLE_ID=${DISCORD_ROLE_ID}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
