--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.13.0",
     "adm-zip": "^0.5.12",
+    "chardet": "^2.0.0",
     "cron": "^3.1.7",
     "discord.js": "^14.15.2",
     "idb": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "metar-taf-parser": "^9.0.0",
     "nuxt": "^3.11.2",
     "ol": "^9.1.0",
     "ol-mapbox-style": "^12.3.2",
