--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "node .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "recreateDb": "npx prisma migrate diff --from-empty --to-schema-datamodel prisma/schema.prisma --script > prisma/migrations/0_init/migration.sql && rm -rf .config/db && docker compose down",
-    "lint:ts": "eslint --ext \".js,.ts,.vue\" ./src",
-    "lint:ts:fix": "eslint --fix --ext \".js,.ts,.vue\" ./src",
+    "lint:ts": "eslint ./src",
+    "lint:ts:fix": "eslint ./src --fix",
     "stylelint": "stylelint --max-warnings=0 ./src/**/*{.css,scss,.vue}",
     "stylelint:fix": "stylelint --fix ./src/**/*{.css,scss,.vue}",
     "lint:fix": "yarn stylelint:fix && yarn lint:ts:fix",
@@ -22,43 +22,46 @@
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.13.0",
     "adm-zip": "^0.5.12",
+    "chardet": "^2.0.0",
     "cron": "^3.1.7",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.2",
     "idb": "^8.0.0",
+    "jschardet": "^3.1.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "metar-taf-parser": "^9.0.0",
     "nuxt": "^3.11.2",
     "ol": "^9.1.0",
+    "ol-mapbox-style": "^12.3.2",
     "pinia": "^2.1.7",
     "prisma": "^5.13.0",
     "sharp": "^0.33.3",
     "sqlite3": "^5.1.7",
     "ua-parser-js": "2.0.0-beta.2",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.26",
+    "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.2.0",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxt/devtools": "^1.3.1",
+    "@nuxt/eslint": "^0.3.12",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@stylistic/stylelint-plugin": "^2.1.2",
     "@types/adm-zip": "^0.5.5",
-    "@types/eslint": "^8.56.10",
     "@types/geojson": "^7946.0.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.12.7",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.12.10",
+    "eslint": "^9.2.0",
     "postcss": "^8.4.38",
-    "postcss-html": "^1.6.0",
-    "sass": "^1.76.0",
-    "stylelint": "^16.4.0",
+    "postcss-html": "^1.7.0",
+    "sass": "^1.77.1",
+    "stylelint": "^16.5.0",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.4.5",
+    "vite-plugin-eslint2": "^4.4.0",
     "vue-tsc": "^1.8.27"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.2.2"
 }
