--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prisma": "^5.14.0",
     "sharp": "^0.33.4",
     "sqlite3": "^5.1.7",
+    "svgo": "^3.3.2",
     "ua-parser-js": "2.0.0-beta.2",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.27",
