--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,15 @@ VATSIM_CLIENT_SECRET=BoQ79tZfrHutIAiCIRrneuzFKBjgEs9y3gwy1tQW
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 
 DOMAIN=https://localhost:8080
-DATABASE_URL="mysql://root:localhost@db:3306/radar?schema=public"
+DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public
+
+DISCORD_CLIEND_ID=1229876151602905220
+DISCORD_SERVER_ID=1229876151602905220
+DISCORD_RELEASES_CHANNEL_ID=1229876151602905220
+DISCORD_ROLE_ID=1229876151602905220
+DISCORD_TOKEN=
+
+INFLUX_URL=
+INFLUX_TOKEN=
+INFLUX_ORG=
+INFLUX_BUCKET=
