feat: down mode

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -15,6 +15,7 @@ ARG DISCORD_TOKEN
 ARG DISCORD_SERVER_ID
 ARG DISCORD_RELEASES_CHANNEL_ID
 ARG DISCORD_ROLE_ID
+ARG IS_DOWN
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
@@ -31,6 +32,7 @@ ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
 ENV NUXT_DISCORD_SERVER_ID=${DISCORD_SERVER_ID}
 ENV NUXT_DISCORD_RELEASES_CHANNEL_ID=${DISCORD_RELEASES_CHANNEL_ID}
 ENV NUXT_DISCORD_ROLE_ID=${DISCORD_ROLE_ID}
+ENV NUXT_IS_DOWN=${IS_DOWN}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
