--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 
 DOMAIN=https://localhost:8080
 DATABASE_URL="mysql://root:localhost@db:3306/radar?schema=public"
+
+IS_DOWN=false
