--- a/.github/workflows/codecheck.yaml
+++ b/.github/workflows/codecheck.yaml
@@ -1,8 +1,10 @@
 name: Code check
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches-ignore:
+      - main
+      - next
 
 jobs:
   check:
