--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.4.5",
     "vite-plugin-eslint2": "^4.4.0",
+    "vue-component-type-helpers": "^2.0.19",
     "vue-tsc": "^1.8.27"
   },
   "packageManager": "yarn@4.2.2"
