refactor: move routes to /api prefix, add restricted Discord auth

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -15,6 +15,7 @@ ARG DISCORD_TOKEN
 ARG DISCORD_SERVER_ID
 ARG DISCORD_RELEASES_CHANNEL_ID
 ARG DISCORD_ROLE_ID
+ARG ACCESS_BY_DISCORD_ROLES
 ARG IS_DOWN
 
 ENV NUXT_DOMAIN=${DOMAIN}
@@ -32,6 +33,7 @@ ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
 ENV NUXT_DISCORD_SERVER_ID=${DISCORD_SERVER_ID}
 ENV NUXT_DISCORD_RELEASES_CHANNEL_ID=${DISCORD_RELEASES_CHANNEL_ID}
 ENV NUXT_DISCORD_ROLE_ID=${DISCORD_ROLE_ID}
+ENV NUXT_ACCESS_BY_DISCORD_ROLES=${ACCESS_BY_DISCORD_ROLES}
 ENV NUXT_IS_DOWN=${IS_DOWN}
 
 COPY package.json package.json
