--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ NAVIGRAPH_CLIENT_SECRET=
 NAVIGRAPH_SERVER_ID=
 NAVIGRAPH_SERVER_SECRET=
 
-VATSIM_CLIENT_ID=762
-VATSIM_CLIENT_SECRET=BoQ79tZfrHutIAiCIRrneuzFKBjgEs9y3gwy1tQW
+VATSIM_CLIENT_ID=819
+VATSIM_CLIENT_SECRET=QqahebIdibK4rNsFyg8AKbx9lbdYpORwDuR0NBDe
 VATSIM_ENDPOINT=https://auth-dev.vatsim.net
 
 DOMAIN=https://localhost:8080
@@ -14,8 +14,9 @@ DATABASE_URL=mysql://root:localhost@db:3306/radar?schema=public
 DISCORD_CLIEND_ID=1229876151602905220
 DISCORD_SERVER_ID=1229876151602905220
 DISCORD_RELEASES_CHANNEL_ID=1229876151602905220
-DISCORD_ROLE_ID=1229876151602905220
+DISCORD_ROLE_ID=1237157417377337455
 DISCORD_TOKEN=
+#ACCESS_BY_DISCORD_ROLES=1237157417377337455,1237157276327084065
 
 INFLUX_URL=
 INFLUX_TOKEN=
@@ -23,3 +24,4 @@ INFLUX_ORG=
 INFLUX_BUCKET=
 
 IS_DOWN=false
+
