Revert "chore: disable down mode"
This reverts commit 70c41701b14b041be845d027d6a885caeb9262b9.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,8 +52,8 @@ jobs:
             DISCORD_ROLE_ID=${{ vars.DISCORD_ROLE_ID }}
             IS_DOWN=${{ vars.IS_DOWN }}
   deploy:
-    runs-on: production
-    #runs-on: beget
+    #runs-on: production
+    runs-on: beget
     needs:
       - push
     permissions:
