chore: change renovate base branches

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -72,8 +72,7 @@
   },
   "updateInternalDeps": true,
   "baseBranches": [
-    "main",
-    "/^release\\/.*/"
+    "next"
   ],
   "extends": [
     ":automergeDisabled",
