--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -2,29 +2,11 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    http2 on;
+
     server_name _;
     location / {
-        resolver 127.0.0.1 valid=30s;
-        set $upstream_prod app;
-        proxy_pass http://$upstream_prod:3000;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
-
-server {
-    listen 80;
-    listen [::]:80;
-
-    server_name next.vatsim-radar.com www.next.vatsim-radar.com;
-    location / {
-        resolver 127.0.0.1 valid=30s;
-        set $upstream_next app-next;
-        proxy_pass http://$upstream_next:3000;
+        proxy_pass http://app:3000;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
