chore: fix nginx upstream resolver

--- a/.config/nginx/default.conf
+++ b/.config/nginx/default.conf
@@ -4,6 +4,7 @@ server {
 
     server_name _;
     location / {
+        resolver 127.0.0.11;
         set $upstream_prod app;
         proxy_pass http://$upstream_prod:3000;
 
@@ -21,6 +22,7 @@ server {
 
     server_name next.vatsim-radar.com www.next.vatsim-radar.com;
     location / {
+        resolver 127.0.0.11;
         set $upstream_next app-next;
         proxy_pass http://$upstream_next:3000;
 
