chore: add influx config to deployment

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -17,6 +17,11 @@ ARG DISCORD_RELEASES_CHANNEL_ID
 ARG DISCORD_ROLE_ID
 ARG ACCESS_BY_DISCORD_ROLES
 ARG IS_DOWN
+ARG INFLUX_URL
+ARG INFLUX_TOKEN
+ARG INFLUX_ORG
+ARG INFLUX_BUCKET_MAIN
+ARG INFLUX_BUCKET_ONLINE
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
@@ -35,6 +40,11 @@ ENV NUXT_DISCORD_RELEASES_CHANNEL_ID=${DISCORD_RELEASES_CHANNEL_ID}
 ENV NUXT_DISCORD_ROLE_ID=${DISCORD_ROLE_ID}
 ENV NUXT_ACCESS_BY_DISCORD_ROLES=${ACCESS_BY_DISCORD_ROLES}
 ENV NUXT_IS_DOWN=${IS_DOWN}
+ENV NUXT_INFLUX_URL=${INFLUX_URL}
+ENV NUXT_INFLUX_TOKEN=${INFLUX_TOKEN}
+ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
+ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
+ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
 
 COPY package.json package.json
 COPY yarn.lock yarn.lock
