--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -55,6 +55,11 @@ jobs:
             DISCORD_ROLE_ID=${{ vars.DISCORD_ROLE_ID }}
             ACCESS_BY_DISCORD_ROLES=${{ vars.ACCESS_BY_DISCORD_ROLES }}
             IS_DOWN=${{ vars.IS_DOWN }}
+            INFLUX_URL=${{ secrets.INFLUX_URL }}
+            INFLUX_TOKEN=${{ secrets.INFLUX_TOKEN }}
+            INFLUX_ORG=${{ secrets.INFLUX_ORG }}
+            INFLUX_BUCKET_MAIN=${{ secrets.INFLUX_BUCKET_MAIN }}
+            INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
   deploy:
     #runs-on: production
     runs-on: beget
