chore: fix discord guild

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -13,6 +13,7 @@ ARG DATABASE_URL
 ARG DISCORD_CLIEND_ID
 ARG DISCORD_TOKEN
 ARG DISCORD_SERVER_ID
+ARG DISCORD_INTERNAL_SERVER_ID
 ARG DISCORD_RELEASES_CHANNEL_ID
 ARG DISCORD_ROLE_ID
 ARG ACCESS_BY_DISCORD_ROLES
@@ -36,6 +37,7 @@ ENV DATABASE_URL=${DATABASE_URL}
 ENV NUXT_DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
 ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
 ENV NUXT_DISCORD_SERVER_ID=${DISCORD_SERVER_ID}
+ENV NUXT_DISCORD_INTERNAL_SERVER_ID=${DISCORD_INTERNAL_SERVER_ID}
 ENV NUXT_DISCORD_RELEASES_CHANNEL_ID=${DISCORD_RELEASES_CHANNEL_ID}
 ENV NUXT_DISCORD_ROLE_ID=${DISCORD_ROLE_ID}
 ENV NUXT_ACCESS_BY_DISCORD_ROLES=${ACCESS_BY_DISCORD_ROLES}
