--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -51,6 +51,7 @@ jobs:
             DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}
             DISCORD_CLIEND_ID=${{ secrets.DISCORD_CLIEND_ID }}
             DISCORD_SERVER_ID=${{ vars.DISCORD_SERVER_ID }}
+            DISCORD_INTERNAL_SERVER_ID=${{ vars.DISCORD_INTERNAL_SERVER_ID }}
             DISCORD_RELEASES_CHANNEL_ID=${{ vars.DISCORD_RELEASES_CHANNEL_ID }}
             DISCORD_ROLE_ID=${{ vars.DISCORD_ROLE_ID }}
             ACCESS_BY_DISCORD_ROLES=${{ vars.ACCESS_BY_DISCORD_ROLES }}
