chore: fix discord token

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -34,7 +34,7 @@ ENV NUXT_VATSIM_CLIENT_SECRET=${VATSIM_CLIENT_SECRET}
 ENV NUXT_VATSIM_ENDPOINT=${VATSIM_ENDPOINT}
 ENV NUXT_DATABASE_URL=${DATABASE_URL}
 ENV DATABASE_URL=${DATABASE_URL}
-ENV NUXT_DISCORD_CLIEND_ID=${DISCORD_CLIEND_ID}
+ENV NUXT_DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
 ENV NUXT_DISCORD_TOKEN=${DISCORD_TOKEN}
 ENV NUXT_DISCORD_SERVER_ID=${DISCORD_SERVER_ID}
 ENV NUXT_DISCORD_INTERNAL_SERVER_ID=${DISCORD_INTERNAL_SERVER_ID}
