chore: fix discord token

--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -49,7 +49,7 @@ jobs:
             NAVIGRAPH_SERVER_SECRET=${{ secrets.NAVIGRAPH_SERVER_SECRET }}
             VATSIM_CLIENT_SECRET=${{ secrets.VATSIM_CLIENT_SECRET }}
             DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}
-            DISCORD_CLIEND_ID=${{ secrets.DISCORD_CLIEND_ID }}
+            DISCORD_CLIENT_ID=${{ secrets.DISCORD_CLIENT_ID }}
             DISCORD_SERVER_ID=${{ vars.DISCORD_SERVER_ID }}
             DISCORD_INTERNAL_SERVER_ID=${{ vars.DISCORD_INTERNAL_SERVER_ID }}
             DISCORD_RELEASES_CHANNEL_ID=${{ vars.DISCORD_RELEASES_CHANNEL_ID }}
