chore: fix discord token

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -10,7 +10,7 @@ ARG VATSIM_CLIENT_ID
 ARG VATSIM_CLIENT_SECRET
 ARG VATSIM_ENDPOINT
 ARG DATABASE_URL
-ARG DISCORD_CLIEND_ID
+ARG DISCORD_CLIENT_ID
 ARG DISCORD_TOKEN
 ARG DISCORD_SERVER_ID
 ARG DISCORD_INTERNAL_SERVER_ID
