--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -48,6 +48,12 @@ ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
 ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
 
+ENV INFLUX_URL=${INFLUX_URL}
+ENV INFLUX_TOKEN=${INFLUX_TOKEN}
+ENV INFLUX_ORG=${INFLUX_ORG}
+ENV INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
+ENV INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
+
 COPY package.json package.json
 COPY yarn.lock yarn.lock
 COPY .yarn /radar/.yarn/
