--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -62,8 +62,8 @@ jobs:
             INFLUX_BUCKET_MAIN=${{ secrets.INFLUX_BUCKET_MAIN }}
             INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
   deploy:
-    #runs-on: production
-    runs-on: beget
+    runs-on: production
+    #runs-on: beget
     needs:
       - push
     permissions:
