--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "version": "0.4.0-beta.4",
+  "version": "0.4.0-rc.1",
   "private": true,
   "type": "module",
   "scripts": {
