--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,10 +54,10 @@ jobs:
             ACCESS_BY_DISCORD_ROLES=${{ vars.ACCESS_BY_DISCORD_ROLES }}
             IS_DOWN=${{ vars.IS_DOWN }}
             INFLUX_URL=${{ secrets.INFLUX_URL }}
-            INFLUX_URL=${{ secrets.INFLUX_TOKEN }}
-            INFLUX_URL=${{ secrets.INFLUX_ORG }}
-            INFLUX_URL=${{ secrets.INFLUX_BUCKET_MAIN }}
-            INFLUX_URL=${{ secrets.INFLUX_BUCKET_ONLINE }}
+            INFLUX_TOKEN=${{ secrets.INFLUX_TOKEN }}
+            INFLUX_ORG=${{ secrets.INFLUX_ORG }}
+            INFLUX_BUCKET_MAIN=${{ secrets.INFLUX_BUCKET_MAIN }}
+            INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
   deploy:
     runs-on: production
     #runs-on: beget
