--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -27,6 +27,13 @@
       "allowedVersions": "<2"
     },
     {
+      "matchPackageNames": [
+        "typescript"
+      ],
+      matchCurrentVersion: "<5.5",
+      "allowedVersions": "<5.5"
+    },
+    {
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch",
       "matchPackagePatterns": [
