--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
-    "typescript": "^5.4.5",
+    "typescript": "5.4.5",
     "vite-plugin-eslint2": "^4.4.0",
     "vue-component-type-helpers": "^2.0.21",
     "vue-tsc": "^1.8.27"
