--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -1,6 +1,7 @@
 name: Bug report (production)
 description: Report found issue on production
 labels: ["bug", "pending triage"]
+assignees: ["daniluk4000"]
 body:
   - type: markdown
     attributes:
