feat: disable jawg layer, chore: add backups

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -23,6 +23,9 @@ ARG INFLUX_TOKEN
 ARG INFLUX_ORG
 ARG INFLUX_BUCKET_MAIN
 ARG INFLUX_BUCKET_ONLINE
+ARG BACKUP_FTP_HOST
+ARG BACKUP_FTP_LOGIN
+ARG BACKUP_FTP_PASSWORD
 
 ENV NUXT_DOMAIN=${DOMAIN}
 ENV NUXT_NAVIGRAPH_CLIENT_ID=${NAVIGRAPH_CLIENT_ID}
@@ -47,6 +50,9 @@ ENV NUXT_INFLUX_TOKEN=${INFLUX_TOKEN}
 ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
 ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
+ENV NUXT_BACKUP_FTP_HOST=${BACKUP_FTP_HOST}
+ENV NUXT_BACKUP_FTP_LOGIN=${BACKUP_FTP_LOGIN}
+ENV NUXT_BACKUP_FTP_PASSWORD=${BACKUP_FTP_PASSWORD}
 
 ENV INFLUX_URL=${INFLUX_URL}
 ENV INFLUX_TOKEN=${INFLUX_TOKEN}
@@ -58,6 +64,9 @@ COPY package.json package.json
 COPY yarn.lock yarn.lock
 COPY .yarn /radar/.yarn/
 COPY .yarnrc.yml .yarnrc.yml
+
+RUN apt-get update
+RUN apt-get install -y default-mysql-client
 
 RUN yarn
 
