--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.15.0",
     "adm-zip": "^0.5.14",
+    "basic-ftp": "^5.0.5",
     "chardet": "^2.0.0",
     "cron": "^3.1.7",
     "discord.js": "^14.15.3",
