chore: rework backups from ftp to CF S3

--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -50,9 +50,9 @@ ENV NUXT_INFLUX_TOKEN=${INFLUX_TOKEN}
 ENV NUXT_INFLUX_ORG=${INFLUX_ORG}
 ENV NUXT_INFLUX_BUCKET_MAIN=${INFLUX_BUCKET_MAIN}
 ENV NUXT_INFLUX_BUCKET_ONLINE=${INFLUX_BUCKET_ONLINE}
-ENV NUXT_BACKUP_FTP_HOST=${BACKUP_FTP_HOST}
-ENV NUXT_BACKUP_FTP_LOGIN=${BACKUP_FTP_LOGIN}
-ENV NUXT_BACKUP_FTP_PASSWORD=${BACKUP_FTP_PASSWORD}
+ENV CF_R2_API=${CF_R2_API}
+ENV CF_R2_ACCESS_ID=${CF_R2_ACCESS_ID}
+ENV CF_R2_ACCESS_TOKEN=${CF_R2_ACCESS_TOKEN}
 
 ENV INFLUX_URL=${INFLUX_URL}
 ENV INFLUX_TOKEN=${INFLUX_TOKEN}
