--- a/.env.example
+++ b/.env.example
@@ -23,9 +23,9 @@ INFLUX_TOKEN=
 INFLUX_ORG=
 INFLUX_BUCKET=
 
-BACKUP_FTP_HOST=
-BACKUP_FTP_LOGIN=
-BACKUP_FTP_PASSWORD=
+CF_R2_API=
+CF_R2_ACCESS_ID=
+CF_R2_ACCESS_TOKEN=
 
 IS_DOWN=false
 
