--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@prisma/client": "^5.16.1",
     "@turf/great-circle": "^7.0.0",
     "adm-zip": "^0.5.14",
-    "basic-ftp": "^5.0.5",
+    "aws-sdk": "^2.1651.0",
     "chardet": "^2.0.0",
     "cron": "^3.1.7",
     "discord.js": "^14.15.3",
