--- a/.github/workflows/publish-next.yaml
+++ b/.github/workflows/publish-next.yaml
@@ -61,9 +61,9 @@ jobs:
             INFLUX_ORG=${{ secrets.INFLUX_ORG }}
             INFLUX_BUCKET_MAIN=${{ secrets.INFLUX_BUCKET_MAIN }}
             INFLUX_BUCKET_ONLINE=${{ secrets.INFLUX_BUCKET_ONLINE }}
-            BACKUP_FTP_HOST=${{ secrets.BACKUP_FTP_HOST }}
-            BACKUP_FTP_LOGIN=${{ secrets.BACKUP_FTP_LOGIN }}
-            BACKUP_FTP_PASSWORD=${{ secrets.BACKUP_FTP_PASSWORD }}
+            CF_R2_API=${{ secrets.CF_R2_API }}
+            CF_R2_ACCESS_ID=${{ secrets.CF_R2_ACCESS_ID }}
+            CF_R2_ACCESS_TOKEN=${{ secrets.CF_R2_ACCESS_TOKEN }}
   deploy:
     runs-on: production
     #runs-on: beget
